--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    
+    env:
+      FORCE_COLOR: 3
+   
     strategy:
       matrix:
         node-version: [14.x]
